[package]
name = "qemu-manip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "1.0.145", features = ["derive"] }
log = { version = "0.4.17"}
